Add JWT Authentication, AuthController, and Global Exception Middleware

--- a/CoffeeLocator.Api/appsettings.Development.json
+++ b/CoffeeLocator.Api/appsettings.Development.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=CoffeeLocatorDb;Trusted_Connection=True;"
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS,1433;Database=CoffeeLocatorDb;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
