--- a/CoffeeLocator.Api/appsettings.json
+++ b/CoffeeLocator.Api/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=CoffeeLocatorDb;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
+  "Jwt": {
+    "Key": "Esta_Es_Una_Llave_Muy_Secreta_Y_Larga_De_Al_Menos_32_Caracteres!",
+    "Issuer": "CoffeeLocator",
+    "Audience": "CoffeeLocatorUsers"
+  }
 }
