--- a/CoffeeLocator.Application/CoffeeLocator.Application.csproj
+++ b/CoffeeLocator.Application/CoffeeLocator.Application.csproj
@@ -4,6 +4,14 @@
     <ProjectReference Include="..\CoffeeLocator.Domain\CoffeeLocator.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="DTOs\Users\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.1" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
